--- a/public/css/gt-admin.css
+++ b/public/css/gt-admin.css
@@ -1,37 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin,latin-ext);
-html {
-  background-color: #56baed;
+.gt-modal-1000{
+    max-width:1000px;
 }
 body{
-	background-color:#F0F0F0; /*#F0F0F0;*/
-	font-family: "Poppins", sans-serif;   
-        height: 100vh;
-}
-.gt-font-bold{
-    font-family: 'Lato', sans-serif;
-    font-weight:bold;
-}
-.gt-font
-{
-    font-family: 'Lato', sans-serif;
-}
-.gt-bg-color-green{
-    background-color:#62bb46; 
-}
-.gt-bg-color-purple{
-    background-color:#db4dff; 
-}
-.gt-bg-color-orange{
-    background-color:#f7941d;
-}
-.gt-color-green{
-    color:#62bb46;
-}
-.gt-color-orange{
-    color:#f7941d;
-}
-.gt-color-purple{
-    color:#db4dff; 
+	background-color:#F0F0F0;
+	font-family:Times, sans-serif;
+	border:0px solid white;
+	margin:0px;
+        overflow: scroll !important;
+        padding-right: 17px!important;
+        padding-left: 17px!important;
 }
 .gt-no-rounded-left{
     border-bottom-left-radius:0%;
@@ -48,7 +25,8 @@ body{
   position: fixed;
   overflow: scroll;
   width: 100%;
-  padding-right: 0!important;
+  padding-left: 17px!important;
+  padding-right: 17px!important;
 }
 p.legendaLogin{
 	font-family: "Times New Roman";
@@ -59,6 +37,11 @@ p.legendaLogin{
 	margin-left:10px;
 	margin-top:0px;
 }
+html{
+	border:0px solid white;
+	margin:0px;
+}
+
 .SEL_NOD{
 	background-color:white;
 	border:1px solid purple;
@@ -555,7 +538,7 @@ LOGIN BOOTSTRAP PAGE
 	-moz-transition: 0.5s ease-in;
 }
 .top-nav.light-header li a.nav-link:hover, .top-nav.light-header .nav-item.active a.nav-link{
-    border-bottom: 0px solid #35cbdf;
+	border-bottom: 0px solid #35cbdf;
     color: #35cbdf;
     transition: 0.5s ease-in;
 	-webkit-transition: 0.5s ease-in;
@@ -568,6 +551,97 @@ LOGIN BOOTSTRAP PAGE
 .secound-head .navbar-nav li .nav-link{
     color:#000;
 }
+/* start login page css */
+.secound-head .navbar-nav li .nav-link{
+	color:#000;
+}
+.secound-head .navbar-brand{
+	color:#000;
+}
+.secound-head.light-header{
+	position:fixed;
+	width:100%;
+	background:#fff;
+	z-index:99999;
+	transition:ease 0.5s;
+}
+.login-page{
+	background: #f6f6f6;  /* fallback for old browsers\
+	background: -webkit-linear-gradient(to bottom, #2399f4, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 
+	background: linear-gradient(to bottom, #2399f4, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	padding:40px 0px;
+	min-height:450px;
+	position:relative;
+	display:inline-flex;
+	width:100%;
+        margin-top:10%;
+}
+.log-box{
+	border-radius:10px;
+	min-height:400px;
+	box-shadow:0px 0px 10px #ccc;
+	display:inline-block;
+	width:100%;
+}
+.logo-back{	
+	background-size: auto auto;
+	display: inline-block;
+	width: 100%;
+	min-height: 400px;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	border-radius: 10px 0px 0px 10px;
+	background-size: cover;
+	background-repeat: no-repeat;
+        margin-left:15px;
+}
+.log-content{
+	padding:60px 20px  0px;
+	display:inline-block;
+	width:100%;
+	background-color:#fff;
+	min-height:400px;
+border-radius:0px 10px 10px 0px;	
+}
+.myr-top{
+	margin-top:15px;
+}
+.log-content .log-body{
+	margin-top:50px;
+}
+.log-content label{
+	margin:0px;
+	font-family:Poppins-R;
+	font-size:14px;
+	display:none;
+}
+.log-content .custom{
+	border-bottom:1px solid #000;
+	padding:10px 10px 10px 0px
+}
+.log-btn{
+	padding-bottom:20px;
+}
+.btn-theme1{
+	font-size:16px;
+	font-family:Poppins-R;
+	padding:10px 20px;
+	background-color:#35cbdf;
+	color:#fff;
+	border:1px solid transparent;
+	border-radius:50px;
+	transition:ease 0.5s;
+}
+.btn-theme1:hover{
+	color:#35cbdf;
+	background-color:#fff;
+	border:1px solid #000;
+}
+.log-bottom-cotent{
+	margin-top:28%;
+}
+/* end login page css */
 .copy-write{
 	display:none !important;
 }
@@ -612,7 +686,7 @@ LOGIN BOOTSTRAP PAGE
 .custom:hover, .custom:focus{
 	background-color:transparent;
 	box-shadow:0px 0px 0px;
-	border-bottom:1px solid #f7941d;
+	border-bottom:1px solid red;
 }
 .custome-input{
 	border:0px;
@@ -645,8 +719,4 @@ LOGIN BOOTSTRAP PAGE
 .latest-section{
 	padding:30px 0px;
 		margin-top:0px;
-}
-.table-hover , .table-hover tbody tr:hover td {
-    /*background-color: #bfbfbf;*/
-    background-color: #668cff;
 }
